--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">MyApplication</string>
+    <string name="app_name">NMedia!</string>
+    <string name="sent">Sent</string>
+    <string name="nmedia">NMedia!</string>
 </resources>
