--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="authorPost">Netology. University of Internet Professions of the Future</string>
     <string name="datePost">May 21 at 18:36</string>
     <string name="contentPost">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has a force that makes you want more, aim higher, run faster. Our mission is to help you get on the road to growth and start a chain of change → http://netolo.gy/fyb</string>
+    <string name="textCountViews">500K</string>
 
 </resources>
